// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Chart snapshots AdoptionChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="4"
    data-testid="line-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="pilots"
      data-name="Pilots"
      data-stroke="#3b82f6"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots AdoptionChart matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="0"
    data-testid="line-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="pilots"
      data-name="Pilots"
      data-stroke="#3b82f6"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots CategoryShareChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="2"
    data-testid="area-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
    <div
      data-datakey="A"
      data-fill="#22c55e"
      data-stroke="#22c55e"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="B"
      data-fill="#3b82f6"
      data-stroke="#3b82f6"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="C"
      data-fill="#f59e0b"
      data-stroke="#f59e0b"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="D"
      data-fill="#ef4444"
      data-stroke="#ef4444"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="Z"
      data-fill="#8b5cf6"
      data-stroke="#8b5cf6"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="T"
      data-fill="#ec4899"
      data-stroke="#ec4899"
      data-testid="area"
      data-type="monotone"
    />
  </div>
</div>
`;

exports[`Chart snapshots CategoryShareChart matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="0"
    data-testid="area-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
    <div
      data-datakey="A"
      data-fill="#22c55e"
      data-stroke="#22c55e"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="B"
      data-fill="#3b82f6"
      data-stroke="#3b82f6"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="C"
      data-fill="#f59e0b"
      data-stroke="#f59e0b"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="D"
      data-fill="#ef4444"
      data-stroke="#ef4444"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="Z"
      data-fill="#8b5cf6"
      data-stroke="#8b5cf6"
      data-testid="area"
      data-type="monotone"
    />
    <div
      data-datakey="T"
      data-fill="#ec4899"
      data-stroke="#ec4899"
      data-testid="area"
      data-type="monotone"
    />
  </div>
</div>
`;

exports[`Chart snapshots DistanceHistogram matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="6"
    data-testid="bar-chart"
  >
    <div
      data-datakey="bucket"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="count"
      data-testid="bar"
    >
      <div
        data-fill="#d1d5db"
        data-testid="cell"
      />
      <div
        data-fill="#93c5fd"
        data-testid="cell"
      />
      <div
        data-fill="#60a5fa"
        data-testid="cell"
      />
      <div
        data-fill="#3b82f6"
        data-testid="cell"
      />
      <div
        data-fill="#2563eb"
        data-testid="cell"
      />
      <div
        data-fill="#1d4ed8"
        data-testid="cell"
      />
    </div>
  </div>
</div>
`;

exports[`Chart snapshots DowChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="7"
    data-testid="bar-chart"
  >
    <div
      data-datakey="day"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#06b6d4"
      data-testid="bar"
    />
  </div>
</div>
`;

exports[`Chart snapshots FlyabilityChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="12"
    data-testid="bar-chart"
  >
    <div
      data-datakey="name"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="avg"
      data-fill="#3b82f6"
      data-testid="bar"
    />
  </div>
</div>
`;

exports[`Chart snapshots FlyabilityChart matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="12"
    data-testid="bar-chart"
  >
    <div
      data-datakey="name"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="avg"
      data-fill="#3b82f6"
      data-testid="bar"
    />
  </div>
</div>
`;

exports[`Chart snapshots HourlyChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="15"
    data-testid="bar-chart"
  >
    <div
      data-datakey="hour"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#8b5cf6"
      data-testid="bar"
    />
  </div>
</div>
`;

exports[`Chart snapshots MonthlyBarChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="12"
    data-testid="composed-chart"
  >
    <div
      data-datakey="name"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="avgDist"
      data-name="Avg km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots MonthlyBarChart matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="12"
    data-testid="composed-chart"
  >
    <div
      data-datakey="name"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="avgDist"
      data-name="Avg km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots PilotDnaChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="5"
    data-testid="radar-chart"
  >
    <div
      data-testid="polar-grid"
    />
    <div
      data-datakey="axis"
      data-testid="polar-angle-axis"
    />
    <div
      data-testid="polar-radius-axis"
    />
    <div
      data-datakey="value"
      data-fill="#3b82f6"
      data-fillopacity="0.25"
      data-testid="radar"
    />
    <div
      data-testid="tooltip"
    />
  </div>
</div>
`;

exports[`Chart snapshots PilotYearlyChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="2"
    data-testid="composed-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="avgDist"
      data-name="Avg km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
    <div
      data-datakey="maxDist"
      data-name="Max km"
      data-stroke="#ef4444"
      data-testid="line"
    />
    <div
      data-datakey="hours"
      data-name="Hours"
      data-stroke="#10b981"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots RecordProgressionChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="4"
    data-testid="area-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="record"
      data-fill="#dbeafe"
      data-stroke="#2563eb"
      data-testid="area"
      data-type="stepAfter"
    />
  </div>
</div>
`;

exports[`Chart snapshots RecordProgressionChart matches snapshot with empty data 1`] = `null`;

exports[`Chart snapshots WingDonut matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-testid="pie-chart"
  >
    <div
      data-datakey="value"
      data-length="3"
      data-testid="pie"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
  </div>
</div>
`;

exports[`Chart snapshots WingDonut matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-testid="pie-chart"
  >
    <div
      data-datakey="value"
      data-length="0"
      data-testid="pie"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
  </div>
</div>
`;

exports[`Chart snapshots YearlyTrendChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="2"
    data-testid="composed-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="totalKm"
      data-name="Total km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots YoYGrowthChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="3"
    data-testid="composed-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="pilots"
      data-fill="#10b981"
      data-name="Pilots"
      data-testid="bar"
    />
    <div
      data-datakey="totalKm"
      data-name="Total km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots YoYGrowthChart matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="0"
    data-testid="composed-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="pilots"
      data-fill="#10b981"
      data-name="Pilots"
      data-testid="bar"
    />
    <div
      data-datakey="totalKm"
      data-name="Total km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;
